# src/main/java/vendredi/soir/karata/endpoint/rest/model/ActionRequest.java
@@ -1,5 +1,3 @@
 package vendredi.soir.karata.endpoint.rest.model;
 
-import java.time.Instant;
-
-public record ActionRequest(String actionType, Long amount, Instant timeoutLimit) {}
+public record ActionRequest(String actionType, Long amount) {}
